Fixed logo size! problem with page starting after a gap! Bah!

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -350,7 +350,7 @@
 .td-navbar .navbar-brand svg {
     display: inline-block;
     margin: 0 10px;
-    height: 30px
+    height: 60px
 }
 
 .people-container {
@@ -383,4 +383,43 @@
     text-decoration: underline;
     color: blue;
 }
-*
+*/
+
+
+.navbar {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .5rem 1rem
+}
+
+
+.td-main {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1
+}
+
+.td-main main {
+    padding-bottom: 2rem
+}
+
+@media(min-width:768px) {
+    .td-main main {
+        padding-top: 5.5rem
+    }
+}
