--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4894,26 +4894,6 @@ input[type=button].btn-block {
     display: block
 }
 
-.navbar {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: .5rem 1rem
-}
-
 .navbar>.container,
 .navbar>.container-fluid {
     display: -webkit-box;
@@ -18113,23 +18093,6 @@ html body .md-typeset .headerlink {
 @media(min-width:768px) {
     .td-default main section:first-of-type {
         padding-top: 8rem
-    }
-}
-
-.td-main {
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1
-}
-
-.td-main main {
-    padding-bottom: 2rem
-}
-
-@media(min-width:768px) {
-    .td-main main {
-        padding-top: 5.5rem
     }
 }
 
